service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kpjavaspringboot-svc
  labels:
    app: kpjavaspringboot
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: kpjavaspringboot
