ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpjavaspringboot-ing
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kpjavaspringboot-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
